--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -135,10 +135,10 @@ div.tab-content(id="top5-manager-content")
                                             table.table.table-striped
                                                 thead
                                                     tr
-                                                        th.t-playername Name1
-                                                        th.t-position POS1
-                                                        th.t-fp FP1
-                                                        th.t-salary Salary1
+                                                        th.t-playername Name
+                                                        th.t-position POS
+                                                        th.t-fp FP
+                                                        th.t-salary Salary
                                         div.table-scroll
                                             table.table.table-striped
                                                 tbody
@@ -148,45 +148,45 @@ div.tab-content(id="top5-manager-content")
                                                         td.t-fp 18.11
                                                         td.t-salary $7700
                                                     tr
-                                                        td Ezekiel Elliot
-                                                        td RB
-                                                        td 15.11
-                                                        td $8300
+                                                        td.t-playername Odell beckham jr
+                                                        td.t-position RB
+                                                        td.t-fp 12.71
+                                                        td.t-salary $6900
                                                     tr
-                                                        td Todd Gurley
-                                                        td RB
-                                                        td 13.43
-                                                        td $6800
+                                                        td.t-playername Tom Brady
+                                                        td.t-position QB
+                                                        td.t-fp 18.11
+                                                        td.t-salary $7700
                                                     tr
-                                                        td AJ Green
-                                                        td WR
-                                                        td 10.72
-                                                        td $7100
+                                                        td.t-playername Tom Brady
+                                                        td.t-position QB
+                                                        td.t-fp 18.11
+                                                        td.t-salary $7700
                                                     tr
-                                                        td Tom Brady
-                                                        td QB
-                                                        td 18.11
-                                                        td $7700
+                                                        td.t-playername Odell beckham jr
+                                                        td.t-position RB
+                                                        td.t-fp 12.71
+                                                        td.t-salary $6900
                                                     tr
-                                                        td Ezekiel Elliot
-                                                        td RB
-                                                        td 15.11
-                                                        td $8300
+                                                        td.t-playername Tom Brady
+                                                        td.t-position QB
+                                                        td.t-fp 18.11
+                                                        td.t-salary $7700
                                                     tr
-                                                        td Todd Gurley
-                                                        td RB
-                                                        td 13.43
-                                                        td $6800
+                                                        td.t-playername Odell beckham jr
+                                                        td.t-position RB
+                                                        td.t-fp 12.71
+                                                        td.t-salary $6900
                                                     tr
-                                                        td AJ Green
-                                                        td WR
-                                                        td 10.72
-                                                        td $7100
+                                                        td.t-playername Tom Brady
+                                                        td.t-position QB
+                                                        td.t-fp 18.11
+                                                        td.t-salary $7700
                                                     tr
-                                                        td AJ Green
-                                                        td WR
-                                                        td 10.72
-                                                        td $7100
+                                                        td.t-playername Tom Brady
+                                                        td.t-position QB
+                                                        td.t-fp 18.11
+                                                        td.t-salary $7700
                              
 
                         div.tab-pane(id="manager2" role="tabpanel")
