--- a/markup/_layouts/_content/homepage-content.jade
+++ b/markup/_layouts/_content/homepage-content.jade
@@ -1,5 +1,5 @@
 section.nl-section.homepage
-	div.container-wider
+	div.container-fluid
 		div.row.sports-options
 			h3.title.col-lg-6 Pick Your Sport:
 			div.sports-icon.col-lg-6
