--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -1,6 +1,9 @@
 /*general for homepage*/
 .nl-section.homepage {
-  padding: 1.5rem 3.25rem;
+    
+  @include respond-to (extra-large-display) {
+    padding: 1.5rem 11.25rem;
+  }  
 }
 
 .homepage {
@@ -62,6 +65,10 @@
   .manager-section .table td, .manager-section .table th {
     font-size: 12px;
     padding: 0px 3px;
+
+    @include respond-to (extra-large-display) {
+      font-size: 13px;
+    }
   }
 
   .manager-info h5 {
@@ -183,6 +190,9 @@
     }
   }
   
+  .t-fp {
+    color: #e19708;
+  }
 
 
   /* kaspers update are above here */
@@ -222,7 +232,7 @@
     }
 
     @include respond-to(medium-display) {
-      min-height: 310px;
+      min-height: 256px;
     }
   }
 
@@ -666,7 +676,6 @@
     }
   }
 
-  .player-image-inner,
   .manager-image-inner {
     background: #0f254f;
     color: #ffffff;
@@ -693,10 +702,106 @@
       position: absolute;
         top: 7px;
         left: 60px;
+        
+        @include respond-to(allnotwide) {
+            left: 40px;
+          }
+
 
         p {
-          font-size: 14px;
-          margin-left: -15px;
+
+          @include respond-to(allwider) {
+            font-size: 15px;
+            margin-left: -14px;
+            padding: 3px 0 0 8px;
+          }
+
+          @include respond-to(allnotwide) {
+            font-size: 13px;
+          }
+          
+        }
+    }
+
+    p {
+      display: inline-block;
+      padding: 5px 0 0 8px;
+      font-size: 15px;
+
+      &.points {
+        color: #e89708;
+        float: right;
+        padding-right: 10px;
+        padding-top: 12px;
+
+        @media screen and (min-width: 768px) {
+          display: none;
+        }
+      }
+
+      &.name {
+        padding-top:8px !important;
+        padding-left: 10px;
+      }
+    }
+
+    .number {
+      width: 40px;
+      height: 40px;
+      padding-left: 8px;
+
+
+      p {
+        font-size: 28px;
+        padding-top: 12px;
+      }
+    }
+  }
+
+  .player-image-inner {
+    background: #0f254f;
+    color: #ffffff;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    text-transform: uppercase;
+    height: 40px;
+
+    @include respond-to(allmobile) {
+      width: calc(100% - 50px);
+      margin: 0 25px;
+    }
+
+    .number {
+      display: inline-block;
+      width: 30px;
+      background: #e89608; /* Old browsers */
+      background: linear-gradient(to bottom, #e89608 0%,#e37606 100%);
+    }
+
+    .name {
+      position: absolute;
+        top: 7px;
+        left: 60px;
+
+        @include respond-to(allnotwide) {
+            left: 40px;
+          }
+
+
+        p {
+
+          @include respond-to(allwider) {
+            font-size: 15px;
+            margin-left: -14px;
+            padding: 3px 0 0 8px;
+          }
+
+          @include respond-to(allnotwide) {
+            font-size: 16px;
+          }
+          
         }
     }
 
@@ -1103,6 +1208,10 @@
     background-color: transparent;
   }
 
+  @include respond-to(extra-large-display)  {
+    background-size: contain;
+  }
+
   .manager-image-inner {
 
     @include respond-to(allmobile) {
@@ -1174,13 +1283,6 @@
 
 .managed-points {
   float: right;
-}
-
-.manager-section {
-  .table td, .table th {
-    font-size: 12px;
-    padding: 1px 3px;
-  }
 }
 
 .t-playername {
