markup and style for chat

--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -235,3 +235,23 @@ section.nl-section.nl-players.nl-live-score
 
 									tbody
 										+team-field-table(7)
+
+			div.col-sm-12.col-lg-6.col-xl-4
+				h6.d-inline-block Live chat
+				div.nl-contest-info-table
+					div.table-heading
+						div.chat-search
+							input.chat-search__input.form-control
+							button.chat-search__button.btn.btn-primary
+								span Post
+
+					div.nl-table-scroll2
+						div.chat
+							div.chat__area
+								p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
