--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -5,7 +5,7 @@
 	height: 140px;
 	overflow-y: hidden;
 	overflow-x: scroll;
-	margin: .25rem 0 .5rem 0;
+	margin: .25rem 0 1.5rem 0;
 
 	&__scrollarea {
 		display: flex;
@@ -113,7 +113,7 @@
 /* current-contests
 ---------------------------------------- */
 .current-contents {
-	margin: .25rem 0 .5rem 0;
+	margin: .25rem 0 1.5rem 0;
 
 	.nl-table-scroll2 {
 		max-height: 120px;
@@ -156,6 +156,7 @@
 .nl-contest-info-table {
 	background-color: #1d2d4e;
 	padding: 0.875rem 0 0 0;
+	margin: .25rem 0 1.5rem 0;
 
 	// Temp - needs custom dropdown
 	.dropdown {
@@ -255,6 +256,7 @@
 	color: #fff;
 	font-weight: 400;
 	font-size: 16px;
+	margin-bottom: calculateRem(16px);
 
 	&__content {
 		padding: calculateRem(24px) calculateRem(16px) calculateRem(14px) calculateRem(16px);
@@ -281,8 +283,12 @@
 
 	&__playlist {
 		display: flex;
-		height: 96px;
+		height: 60px;
 		align-items: flex-end;
+
+		@include respond-to(tabletup) {
+			height: 96px;
+		}
 	}
 
 	&__playlist-item {
@@ -295,9 +301,13 @@
 	  span {
 	  	display: block;
 	  	position: relative;
-	  	font-size: 18px;
+	  	font-size: 14px;
 	  	font-weight: 400;
 	  	line-height: 1.2;
+
+	  	@include respond-to(allwide) {
+	  		font-size: 16px;
+	  	}
 	  }
 
 	  span + span {
@@ -331,6 +341,11 @@
 	  }
 	}
 
+	// some seperate styling for mobile specific block
+	&.mobile-only {
+		margin: calculateRem(16px) 0;
+	}
+
 	// adjustments default leaders list
 	.leaders-list {
 		p {
@@ -342,8 +357,44 @@
 	    padding-bottom: 0.25rem;
 		}
 	}
+
+	&__select {
+		flex: 1;
+    width: 55%;
+
+		.dropdown {
+			width: 100%;
+		}
+
+		.dropdown-toggle {
+			width: 100%;
+		  white-space: nowrap;
+		  overflow: hidden;
+		  text-overflow: ellipsis;
+		}
+	}
 }
 
+// Stats block, either part of stats
+.rank__stats {
+
+	&.part-of-block {
+    flex: 1;
+    min-width: 100px;
+
+		@media (min-width: 992px) and (max-width: 1680px) {
+			display: none;
+		}
+	}
+
+	&.single-block {
+		display: none;
+
+		@media (min-width: 992px) and (max-width: 1680px) {
+			display: block;
+		}
+	}
+}
 
 /* Chat
 ---------------------------------------- */
