--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -438,3 +438,67 @@
 		padding: calculateRem(24px);
 	}
 }
+
+
+/*
+---------------------------------------- */
+.nl-live-score-contest-table {
+	padding: 0;
+
+	.rank {
+		margin-bottom: 0;
+	}
+
+	.rank__no {
+		border-bottom-left-radius: 0;
+
+		span {
+			font-size: 12px;
+			line-height: 1.2;
+			padding: 0 .25rem;
+		}
+
+		span + span {
+			font-size: 18px;
+			font-weight: 700;
+		}
+	}
+
+	.rank__stats {
+		.rank__content {
+			padding: 0.25rem;
+		}
+
+		.leaders-list {
+			p {
+				margin: 0;
+				padding: 0;
+				font-size: 10px;
+				line-height: 1.2;
+			}
+		}
+	}
+
+	.rank__title {
+		padding: 0.5rem;
+		flex: 1;
+	}
+
+	.rank__thumb {
+		padding: 0.5rem;
+	}
+
+	.table-info3,
+	.table-info4{
+		th,
+		td {
+			font-size: 12px;
+		}
+	}
+
+	.indicator{
+	  width: calculateRem(12px);
+	  height: calculateRem(12px);
+	  margin: 0 calculateRem(4px);
+	}
+}
